--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Roboto", sans-serif
 }
 
 :root {
@@ -13,14 +13,16 @@
     --My-Color-Theme-5-hex: #7D4500; 
 }
 
-body {
+body, html {
     background-image: linear-gradient(to right, var(--My-Color-border-hex), var(--My-Color-Theme-1-hex));
-    padding: 30px 0px;
+    height: 100%;
 }
 
 main {
     display: flex;
     justify-content: center;
+    align-items: center;
+    height: 100%;
 }
 
 .content-main {
@@ -137,13 +139,14 @@ nav ul {
 .about-products {
     border: 1px solid var(--My-Color-border-hex);
     padding: 10px;
+    margin: 5px;
     border-radius: 10px;
     cursor: pointer;
     transition: 0.3s ease;
 }
 
 .about-products:hover {
-    background: var(--My-Color-Theme-3-hex);
+    transform: scale(1.1);
 }
 
 .container-img {
@@ -168,9 +171,14 @@ small {
 }
 
 @media (min-width: 320px) and (max-width: 600px) { /* tela de celular */
+    main {
+       height: auto;
+    }
 
     body {
         font-size: 16px;
+        height: auto;
+        padding: 20px 0px;
     }
 
     .content-main {
@@ -209,6 +217,15 @@ small {
 
 @media (max-width:600px), (max-width: 1025px) { /* tela de tablet */
 
+    body {
+        padding: 20px 0px;
+        height: auto;
+    }
+
+    main {
+        height: auto;
+    }
+    
     .content-main {
         grid-template-columns: auto;
     }
